# Order-and-Subscription-Management-System

./: .env.example  Makefile  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_ingredients_tables.py  a1b2c3d4e5f6_seed_default_tenant.py  b7e4f9a2c1d3_add_inactive_product_status.py  b88bb57ae855_init_tables.py  c2d3e4f5a6b7_drop_orders_subscription_cycle_id.py  df662565f47b_replace_is_superuser_with_role.py  f1fa59f56af0_init_tables.py
backend/app/: admin_routes.py  config.py  database.py  dependencies.py  deps.py  exceptions.py  logger.py  main.py  seed.py  seed_demo_data.py  seed_template_data.py
backend/app/core/: cache.py  events.py  exceptions.py  permissions.py  security.py
backend/app/modules/analytics/: models.py  repo.py  routes.py  schemas.py  services.py
backend/app/modules/fulfillment/: models.py  repo.py  routes.py  schemas.py  services.py
backend/app/modules/iam/: models.py  repo.py  routes.py  schemas.py  services.py
backend/app/modules/integration_gateway/: models.py  repo.py  services.py
backend/app/modules/notification_hub/: models.py  repo.py  routes.py  schemas.py  services.py
backend/app/modules/order_management/: models.py  repo.py  routes.py  schemas.py  services.py
backend/app/modules/payment_processing/: models.py  repo.py  routes.py  schemas.py  services.py
backend/app/modules/product_catalog/: models.py  repo.py  routes.py  schemas.py  services.py
backend/app/modules/subscription_engine/: models.py  repo.py  (+3 more)
backend/app/repo/: analytics.py  base.py  db.py  db.py.tmp.53920.1775348145928  fulfillment.py  iam.py  integration.py  notification.py  order.py  payment.py  product.py  session.py  subscription.py  tenant.py
backend/app/schemas/: analytics.py  auth.py  base.py  fulfillment.py  integration.py  notification.py  order.py  payment.py  product.py  subscription.py
backend/app/services/: analytics.py  auth.py  base.py  fulfillment.py  integration.py  notification.py  order.py  payment.py  product.py  subscription.py  tenant.py  user.py
backend/app/shared/: auth.py  events.py  models.py  schemas.py
backend/app/utils/: slug.py
backend/scripts/: init-db.sql
(+129 files in other folders)
